# PedalMap

./: .clang-tidy  .gitignore  ProjectPlan  ProjectPlan.md  README.md  docker-compose.yml  trivy.yaml
.github/workflows/: ci.yml  security.yml
backend/: .clang-tidy  CMakeLists.txt  Dockerfile  README.md  RefactoringPlan.md  TaskPlan.md  main.cc  package-lock.json
backend/controllers/: RouteController.cc  RouteController.h
backend/services/: ConfigService.cc  ConfigService.h  Coordinate.h  OSRMClient.cc  OSRMClient.h  RouteService.cc  RouteService.h  SpotService.cc  SpotService.h
backend/services/elevation/: ElevationCacheManager.cc  ElevationCacheManager.h  GSIElevationProvider.cc  GSIElevationProvider.h  IElevationCacheRepository.h  IElevationProvider.h  RedisElevationAdapter.cc  RedisElevationAdapter.h  SmartRefreshService.cc  SmartRefreshService.h
backend/tests/: ElevationCacheManagerTest.cc  GSIElevationProviderTest.cc  LruCacheTest.cc  OSRMIntegrationTest.cc  PolylineDecoderTest.cc  RouteControllerTest.cc  RouteServiceTest.cc  RouteSimulationTest.cc  SmartRefreshServiceTest.cc  SpotServiceTest.cc
backend/tests/data/: simulation_scenarios.csv  spots_test.csv
backend/tests/integration/: RedisIntegrationTest.cc  integration_scenarios.js  performance_test.js
backend/tests/integration/data/: invalid_inputs.json  test_routes.json
backend/utils/: LruCache.h  PolylineDecoder.cc  PolylineDecoder.h
frontend/: Dockerfile  README.md  jest.config.ts  package-lock.json  package.json
frontend/app/: page.test.tsx  page.tsx
frontend/components/: ControlPanel.tsx  MapContainer.tsx  PlaceAutocomplete.tsx  RoutePolyline.tsx  RouteStats.tsx  WaypointsList.tsx
frontend/config/: constants.ts
frontend/hooks/: useRoute.ts
frontend/types/: index.ts
plans/: algorithm_design.md  cleanup_plan.md  elevation_cache_plan.md  final_task_plan.md  frontend_manual_test.md  test_plan.md
